Fix vertical alignment of non-equal sized two-column layout

--- a/slides/slides.css
+++ b/slides/slides.css
@@ -89,7 +89,6 @@ a, a > code {
 .right-column {
   width: 65%;
   float: right;
-  padding-top: 1em;
 }
 .center {
   text-align: center;
